--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^3.3.1",
     "firebase": "^9.22.0",
-    "googleapis": "^118.0.0"
+    "google-auth-library": "^8.8.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
