--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^3.3.1",
     "firebase": "^9.22.0",
-    "google-auth-library": "^8.8.0"
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
