--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,21 @@
-{
-  "rules": {
-    "no-unused-vars": "warn", 
-    "react-hooks/exhaustive-deps": "warn"
+module.exports = {
+  env: {
+    browser: true,
+    es2021: true
+  },
+  extends: [
+    'eslint:recommended',
+    'plugin:react/recommended',
+    'plugin:react-hooks/recommended' // Add recommended hooks rules
+  ],
+  plugins: ['react', 'react-hooks'], // Include the hooks plugin
+  rules: {
+    'react-hooks/rules-of-hooks': 'error', // Enforce the rules of hooks
+    'react-hooks/exhaustive-deps': 'warn' // Warn about missing dependencies
+  },
+  settings: {
+    react: {
+      version: 'detect'
+    }
   }
-}
+};
