--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
+# netlify.toml
 [build]
   command = "npm run build"
   publish = "build"
@@ -6,3 +7,6 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[functions]
+  directory = "netlify/functions"
