--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "google-spreadsheet": "^3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -49,7 +49,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "react-app-rewired": "^2.2.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
