--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "firebase": "^9.15.0",
-    "google-spreadsheet": "^3.3.0"
+    "google-spreadsheet": "^3.3.0",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
+    "react-app-polyfill": "^3.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
