--- a/package.json
+++ b/package.json
@@ -11,19 +11,12 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "firebase": "^9.15.0",
-    "google-spreadsheet": "^3.3.0",
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.4",
-    "react-app-polyfill": "^3.0.0"
+    "firebase": "^9.15.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -56,8 +49,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.1",
-    "react-app-rewired": "^2.2.1",
-    "webpack-node-externals": "^3.0.0"
+    "google-spreadsheet": "^3.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
