--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "postinstall": "cd netlify/functions && npm install"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
