--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   command = """
     echo "Starting build process" && \
-    npm run build || (echo "React build failed" && exit 1) && \
+    npm run build > build.log 2>&1 || (cat build.log && echo "React build failed" && exit 1) && \
     echo "React build successful, installing function dependencies" && \
-    cd netlify/functions && npm install || (echo "Function dependency installation failed" && exit 1) && \
+    (cd netlify/functions && npm install > function-install.log 2>&1) || (cat function-install.log && echo "Function dependency installation failed" && exit 1) && \
     echo "Build process completed successfully"
   """
   publish = "build"
