--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "echo 'Starting React build' && react-app-rewired build --verbose",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
