--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "react-app-rewired": "^2.2.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "babel-loader": "^9.1.2"
   }
 }
