--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "firebase": "^9.22.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
