--- a/netlify.toml
+++ b/netlify.toml
@@ -11,12 +11,13 @@
 
 [build.environment]
   NODE_VERSION = "18.0.0"
-  REACT_APP_FIREBASE_API_KEY = "your_api_key"
-  REACT_APP_FIREBASE_AUTH_DOMAIN = "your_auth_domain"
-  REACT_APP_FIREBASE_PROJECT_ID = "your_project_id"
-  REACT_APP_FIREBASE_STORAGE_BUCKET = "your_storage_bucket"
-  REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "your_messaging_sender_id"
-  REACT_APP_FIREBASE_APP_ID = "your_app_id"
+  REACT_APP_FIREBASE_API_KEY = "AIzaSyBI_K1aSiful-dW-sFX6Fx5Bu5V-3gl1w8"
+  REACT_APP_FIREBASE_AUTH_DOMAIN = "wild-recipes-fa59a.firebaseapp.com"
+  REACT_APP_FIREBASE_PROJECT_ID = "wild-recipes-fa59a"
+  REACT_APP_FIREBASE_STORAGE_BUCKET = "wild-recipes-fa59a.appspot.com"
+  REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "371001502696"
+  REACT_APP_FIREBASE_APP_ID = "1:371001502696:web:fb8705effe697fdf4cd25d"
+  REACT_APP_FIREBASE_MEASUREMENT_ID = "G-02G9MCFGEZ"
 
 [[redirects]]
   from = "/*"
